# programming_practice

./: .rubocop.yml  coding_patterns.md  pyproject.toml  rename_screenshots_to_numbers.rb  resume_projects_documentation.md
algo_patterns_python/: anchorage.txt  pyproject.toml
algo_patterns_python/basic_programming_python/: data_structures_practice.py
algo_patterns_python/dynamic_programming/: coin_change.py
algo_patterns_python/graphs/: bellman_ford.py  bfs_algo.py  djikstras_algo.py  eulerian_path.md  floyd_warshall.py  graph.py  johnsons_algo.py  run_algos.py  union_find.py
algo_patterns_python/sliding_window/: chain_strings.py  chain_strings_dp.py  coin_change.py  course_schedule.py  longest_str_no_repeat_chars.py  lru_cache.py  min_sub_arr_len.py  n_queens.py
concepts_summary/: array_string_problems.md  backtracking.md  binary_tree.md  data_structures.md  data_structurs.md  fibonacci.md  heap_problems.md  mountain_arr.md  top_n_out_of_k.md  tree_graph_problems.md  trie_with_without_parent_pointers.md
data_science_ai/: data_science_elaborate.md  data_science_links.md  data_science_slides.md
grind_75/: 0_1_matrix.rb  3_sum.rb  accounts_merge.rb  anagram.rb  array_duplicates.rb  backtracking.md  bad_version.rb  balanced_bst_and_height.rb  basic_calculator.rb  best_time_to_buy_sell_stock.rb  binary_sum.rb  climbing_stairs.rb  clone_graph.rb  coin_change.rb  course_schedule.rb  course_schedules.rb  diameter_binary_tree.rb  edit_distance.rb  evaluate_reverse_polilsh_notation.rb  find_median_data_stream.rb  flood_fill.rb  grind_75.md  implement_flatten.rb  (+49 more)
(+152 files in other folders)
