[project]
name = "algo-patterns-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Ravi Kumar Nayak",email = "ravinayak19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "algo_patterns_python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
